k8s/deployment-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: exam-richard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: dellaxy/exam-backend:latest
        ports:
        - containerPort: 5000
        volumeMounts:
          - name: uploads-volume
            mountPath: /app/uploads
      volumes:
      - name: uploads-volume
        persistentVolumeClaim:
          claimName: exam-richard-pvc
