k8s/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-database
  namespace: exam-richard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data
          subPath: database
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: exam-richard-pvc
