k8s/deployment-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-frontend
  namespace: exam-richard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec: 
      containers:
      - name: frontend-container
        image: dellaxy/exam-frontend:latest
        ports:
          - containerPort: 80
