k8s/service-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: exam-richard
spec:
  selector:
    app: backend
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30050
