k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: exam-richard
spec:
  selector:
    app: database
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
