k8s/service-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam-richard
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
